welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: not found: value value
		if(nums(c) == value) {
                              ^occurrences:5: error: reassignment to val
			a = a + 1
                          ^